--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <!-- content start from here-->
 <header  id="myintro" style="text-align: center;">
           <div class="main-img">
-            <img src="Images/homepage-printdesign2.png" class="img-responsive" style="width:100% auto;" alt="print design mockup">
+            <img src="Images/homepage-printdesign2.png" class="img-responsive" style="width:100% auto;" alt="print design mockup" />
           </div>
           <div><a href="#myintro"></a></div>
           <div class="introbtn">
@@ -51,7 +51,7 @@
                 <a href="#project-a" class="btn">Explore my projects</a>
                 <a href="/assets/cv/Danny-Gebran-CV-2018.pdf" class="btn btncv" target="_blank">Download my CV</a>
               </div>
-          </div> 
+          </div>
 </header>
 
 <section id="mymain">
@@ -67,68 +67,51 @@
       <h3 class="headers-txt">Portfolio</h3>
       <div class="row">
       <div class="col-sm-6">
-        <a href="https://livingenglish.ie/" target="_blank">
           <div class="thumbnail">
-            <img src="/images/macbook-websites-view.gif" class="img-responsive" style="width:100%" alt="living English ireland website design">
+            <a href="https://livingenglish.ie/" data-position="center center"  target="_blank"><img src="/images/macbook-websites-view.gif" class="img-responsive" style="width:100%" alt="living English ireland website design" /></a>
           </div>
-        </a>
       </div>
       <div class="col-sm-6">
-        <a href="https://digitalchief.ie/" target="_blank">
-          <div class="thumbnail"> 
-            <img src="/images/mobile-view4.gif" class="img-responsive" style="width:100%" alt="digitalchief.ie website design">
+          <div class="thumbnail">
+            <a href="https://digitalchief.ie/" data-position="center center" target="_blank"><img src="/images/mobile-view4.gif" class="img-responsive" style="width:100%" alt="digitalchief.ie website design" /></a>
           </div>
-        </a>
       </div>
     </div>
     </div>
     <div class="row">
       <div class="col-sm-6">
-        <a href="https://ballyhouraapplefarm.com/" target="_blank">
           <div class="thumbnail">
-            <img src="images/dg-thumb-3.jpg" class="img-responsive" style="width:100%" alt="ballyhoura apple farm website design">
+            <a href="https://ballyhouraapplefarm.com/" data-position="center center" target="_blank"><img src="images/dg-thumb-3.jpg" class="img-responsive" style="width:100%" alt="ballyhoura apple farm website design" /></a>
           </div>
-        </a>
       </div>
       <div class="col-sm-6">
-        <a href="https://livingenglish.ie/" target="_blank">
           <div class="thumbnail">
-            <img src="/images/dg-thumb-2.jpg" class="img-responsive" style="width:100%" alt="livingenglish.ie web site design">
+            <a href="https://livingenglish.ie/" data-position="center center" target="_blank"><img src="/images/dg-thumb-2.jpg" class="img-responsive" style="width:100%" alt="livingenglish.ie web site design" /></a>
           </div>
-        </a>
       </div>
     </div><br>
-
     <div class="row" id="project-b">
       <div class="col-sm-6">
-        <a href="https://thompson.ie/" target="_blank">
-          <div class="thumbnail"> 
-            <img src="/images/dg-thumb-4.jpg" class="img-responsive" style="width:100%" alt="thompson.ie web site design">
+          <div class="thumbnail">
+            <a href="https://thompson.ie/" data-position="center center" target="_blank" /><img src="/images/dg-thumb-4.jpg" class="img-responsive" style="width:100%" alt="thompson.ie web site design" /></a>
           </div>
-        </a>
       </div>
       <div class="col-sm-6">
-        <a href="#project-b">
           <div class="thumbnail">
-            <img src="/images/dg-thumb-1.jpg" class="img-responsive" style="width:100%" alt="connormccabe.ie mobile web design">
+            <a href="#project-b" data-position="center center" ><img src="/images/dg-thumb-1.jpg" class="img-responsive" style="width:100%" alt="connormccabe.ie mobile web design" /></a>
           </div>
-        </a>
       </div>
     </div>
       <div class="row">
         <div class="col-sm-6">
-         <a href="#project-b">
-            <div class="thumbnail"> 
-              <img src="/images/dg-thumb-5.jpg" class="img-responsive" style="width:100%" alt="connor mccabe web design">
+            <div class="thumbnail">
+              <a href="#project-b" data-position="center center"><img src="/images/dg-thumb-5.jpg" class="img-responsive" style="width:100%" alt="connor mccabe web design" /></a>
             </div>
-          </a>
         </div>
         <div class="col-sm-6">
-          <a href="#project-b">
             <div class="thumbnail">
-              <img src="images/dg-thumb-7.jpg" class="img-responsive" style="width:100%" alt="crescent clinic proposal design">
+              <a href="#project-b" data-position="center center"><img src="images/dg-thumb-7.jpg" class="img-responsive" style="width:100%" alt="crescent clinic proposal design" /></a>
             </div>
-          </a>
         </div>
     </div><br><br>
 
@@ -142,13 +125,13 @@
       <p><em>In essence, knowing the user needs and wants will entirely direct the process towards best outcomes in design benefiting customers and the organisation:<strong> "Data define design"</strong></em></p>
       <div class="wireframes">
           <div>
-            <img src="/images/Thumb-dg-sketch1-650x900.jpg" class="img-responsive" style="width:300px" alt="sketching">
+            <img src="/images/Thumb-dg-sketch1-650x900.jpg" class="img-responsive" style="width:300px" alt="sketching" />
           </div>
           <div>
-            <img src="/images/Thumb-dg-portfolio-styleguide-450x450.jpg" class="img-responsive" style="width:300px" alt="style guide">
+            <img src="/images/Thumb-dg-portfolio-styleguide-450x450.jpg" class="img-responsive" style="width:300px" alt="style guide" />
             </div>
             <div>
-            <img src="/images/Thumb-dg-portfolio-wireframe-450x450.jpg" class="img-responsive" style="width:300px" alt="wireframes">
+            <img src="/images/Thumb-dg-portfolio-wireframe-450x450.jpg" class="img-responsive" style="width:300px" alt="wireframes" />
           </div>
       </div>
     </div>
@@ -164,7 +147,7 @@
           </ul>
         </div>
           <div class="img-centered">
-            <img src="/images/dg-software-skills.jpg" class="img-responsive" width="800px" alt="design skills">
+            <img src="/images/dg-software-skills.jpg" class="img-responsive" width="800px" alt="design skills" />
           </div>
       </div>
     <div class="intro-txt">
