Updates on bootstrap
Updated links, classes for bootstrap 4

--- a/index.html
+++ b/index.html
@@ -7,35 +7,35 @@
     <link rel="shortcut icon" href="images/dg_fav_icon.png" />
     <meta name="theme-color" content="#330099">
     <meta name="description" content="Graphic Designer and Front-End web developer, UX / UI. Experienced on web design, editorial design, app user interface, logo design and brand corporate image, print and online publishing and creative direction. Visual communication, user experience design principles and usability. Delivering genuine business value aligned to corporate objectives.">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" href="assets/css/main.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,600i,700,700i|Open+Sans:400,400i,600,600i,700,700i" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="assets/css/main.css">
 </head>
 
 <body>
   <div id="mybody">
 
-  <nav class="navbar navbar-inverse navbar-fixed-top" id="mynav">
-    <div>
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
+  <nav class="navbar navbar-expand-lg navbar-dark" id="mynav">
         <a class="navbar-brand" href="#">DG Portfolio</a>
-      </div>
-      <div class="collapse navbar-collapse" id="myNavbar">
-        <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="#myprocess">Design Process</a></li>
-          <li><a href="#project-a">Projects</a></li>
-          <li><a href="/assets/cv/Danny-Gebran-CV-2018.pdf" target="_blank">CV(.pdf)</a></li>
-          <li><a href="#contactme">Contact</a></li>
+        <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#myNavbar" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+      <div class="navbar-collapse collapse"  id="myNavbar">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a></li>
+          <li class="nav-item"><a class="nav-link" href="#myprocess">Design Process</a></li>
+          <li class="nav-item"><a class="nav-link" href="#project-a">Projects</a></li>
+          <li class="nav-item"><a class="nav-link" href="/assets/cv/Danny-Gebran-CV-2018.pdf" target="_blank">CV(.pdf)</a></li>
+          <li class="nav-item"><a class="nav-link" href="#contactme">Contact</a></li>
         </ul>
       </div>
-    </div>
   </nav>
 
 <!-- content start from here-->
@@ -175,7 +175,8 @@
 </section>
 
 </div> <!-- id=mybody -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script> -->
 </body>
 </html>
