Links to social networks
Added, behance and codepen

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a></li>
           <li class="nav-item"><a class="nav-link" href="#myprocess">Design Process</a></li>
           <li class="nav-item"><a class="nav-link" href="#project-a">Projects</a></li>
-          <li class="nav-item"><a class="nav-link" href="/assets/cv/Danny-Gebran-CV-2018.pdf" target="_blank">CV(.pdf)</a></li>
+          <li class="nav-item"><a class="nav-link" href="https://github.com/dannygebran/visual-designer-portfolio/raw/master/assets/CV/Danny-Gebran-CV-2018.pdf" target="_blank">CV(.pdf)</a></li>
           <li class="nav-item"><a class="nav-link" href="#contactme">Contact</a></li>
         </ul>
       </div>
@@ -49,7 +49,7 @@
             <h2>Danny Gebran</h2>
               <div>
                 <a href="#project-a" class="btn">Explore my projects</a>
-                <a href="https://github.com/dannygebran/visual-designer-portfolio/assets/CV/Danny-Gebran-CV-2018.pdf" class="btn btncv" target="_blank">Download my CV</a>
+                <a href="https://github.com/dannygebran/visual-designer-portfolio/raw/master/assets/CV/Danny-Gebran-CV-2018.pdf" class="btn btncv" target="_blank">Download my CV</a>
               </div>
           </div>
 </header>
@@ -138,7 +138,7 @@
       <div class="row" id="skills">
         <h3 class="headers-txt">Software Skills</h3>
        <div class="intro-txt">
-          <p>There are new awesome design tools every year. However, these are my commons selected from a large pool of programs related to interface edition, website design, print layouts, image and graphics,  which I think they represent the choice of most designers who I've worked with in collaboration for different projects.</p>
+          <p>There are new awesome design tools every year. However, these are my commons selected from a large pool of programs related to interface edition, website design, print layouts, image and graphics, they represent the choice of most designers who I've worked with in collaboration for different projects.</p>
           <ul class="mylist">
              <li>Adobe CS: Photoshop, Illustrator, Adobe Xd, InDesign, Ae. </li>
              <li>Balsamiq, Origami, Sketch, InVision.</li>
@@ -152,7 +152,7 @@
       </div>
     <div class="intro-txt">
       <h3 class="headers-txt">About my work</h3>
-      <p>Since I've started questioning any design solution challenging assumptions about what is the best for consumers, and observing their behaviours and developing empathy for the final user and their benefit, from that moment I knew that I was into something more complex than creating a well-presented design for my client.</p>
+      <p>Since I've started questioning any design solution challenging assumptions about what is the best for consumers, and observing their behaviours and developing empathy for the final user and their benefit, I was into something more complex than creating a well-presented design for my client.</p>
       <p>Consequently, UX became of my interest, and design thinking is the fundamental framework underpinning it. Empathise, define, ideate, prototype and test conform this process which is constantly repeated for micro or macro project. Everything start with an honest user-centered sketching, prototyping, testing of ideas, learning and implementing once and again.</p>
     </div>
     <div class="intro-txt" id="contactme">
@@ -160,12 +160,14 @@
       <p style="text-align: center;">Write a message, press the button below to send an email from your mail app.</p>
     </div>
       <div style="text-align: center;">
-        <a href="mailto:dannygebran@gmail.com" class="btn contact-btn">Send me an E-mail</a>
+        <a href="mailto:uxvisualcodedesigner@gmail.com" class="btn contact-btn">Send me an E-mail</a>
       </div>
       <div style="text-align: center;">
           <a href="https://twitter.com/dannygebran" target="_blank"><i class="fa fa-twitter fa-3x ibtn"></i></a>
           <a href="https://www.linkedin.com/in/danny-gebran/" target="_blank"><i class="fa fa-linkedin fa-3x ibtn"></i></a>
+          <a href="https://www.behance.net/dannygebran" target="_blank"><i class="fa fa-behance fa-3x ibtn"></i></a>
           <a href="https://github.com/dannygebran" target="_blank"><i class="fa fa-github fa-3x ibtn"></i></a>
+          <a href="https://codepen.io/dannygebran" target="_blank"><i class="fa fa-codepen fa-3x ibtn"></i></a>
         </div>
 </section> <!-- id=myprocess -->
 
@@ -175,8 +177,5 @@
 </section>
 
 </div> <!-- id=mybody -->
-<!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script> -->
 </body>
 </html>
