New email on files
new email on links and documents

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
       <p style="text-align: center;">Write a message, press the button below to send an email from your mail app.</p>
     </div>
       <div style="text-align: center;">
-        <a href="mailto:uxvisualcodedesigner@gmail.com" class="btn contact-btn">Send me an E-mail</a>
+        <a href="mailto:uxwebdesigner2018@gmail.com" class="btn contact-btn">Send me an E-mail</a>
       </div>
       <div style="text-align: center;">
           <a href="https://twitter.com/dannygebran" target="_blank"><i class="fa fa-twitter fa-3x ibtn"></i></a>
