--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <!-- content start from here-->
 <header  id="myintro" style="text-align: center;">
           <div class="main-img">
-            <img src="https://github.com/dannygebran/visual-designer-portfolio/blob/master/Images/homepage-printdesign2.png?raw=true" class="img-responsive" style="width:auto;" alt="print design mockup" />
+            <img src="https://github.com/dannygebran/visual-designer-portfolio/blob/master/Images/homepage-printdesign2.png?raw=true" class="img-responsive" style="width:550px;" alt="print design mockup" />
           </div>
           <div><a href="#myintro"></a></div>
           <div class="introbtn">
