--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a></li>
           <li class="nav-item"><a class="nav-link" href="#myprocess">Design Process</a></li>
           <li class="nav-item"><a class="nav-link" href="#project-a">Projects</a></li>
-          <li class="nav-item"><a class="nav-link" href="https://github.com/dannygebran/visual-designer-portfolio/raw/master/assets/CV/Danny-Gebran-CV-2018.pdf" target="_blank">CV(.pdf)</a></li>
+          <li class="nav-item"><a class="nav-link" href="https://github.com/dannygebran/visual-designer-portfolio/raw/master/assets/CV/Danny-Gebran-CV.pdf" target="_blank">CV(.pdf)</a></li>
           <li class="nav-item"><a class="nav-link" href="#contactme">Contact</a></li>
         </ul>
       </div>
@@ -45,11 +45,11 @@
           </div>
           <div><a href="#myintro"></a></div>
           <div class="introbtn">
-            <h1>UX Visual Designer</h1>
+            <h1>UX Design</h1>
             <h2>Danny Gebran</h2>
               <div>
                 <a href="#project-a" class="btn">Explore my projects</a>
-                <a href="https://github.com/dannygebran/visual-designer-portfolio/raw/master/assets/CV/Danny-Gebran-CV-2018.pdf" class="btn btncv" target="_blank">Download my CV</a>
+                <a href="https://github.com/dannygebran/visual-designer-portfolio/raw/master/assets/CV/Danny-Gebran-CV.pdf" class="btn btncv" target="_blank">Download my CV</a>
               </div>
           </div>
 </header>
@@ -58,9 +58,9 @@
       <div class="intro-txt">
         <div style="text-align: center"><a href="#mymain"><i class="fa fa-angle-double-down fa-3x ibtn"></i></a></div>
         <h3 class="headers-txt">About me</h3>
-      <p>Graphic Designer specialized on Web and Print. Currently improving programming skills by diving in Front-End and Back-End development.</p>
-      <p>My experience conveys a variety of design disciplines derived from several years of work covering web design, editorial design, app interface, logo design and brand corporate image, print and online publishing, and creative direction.</p>
-      <p>These pieces below conform a brief snap of my experience and each of them implies a development following a systematic but flexible process combining client expectations, business objectives and user-centred guidelines.</p>
+      <p>Graphic Designer specialized on Web and Print. Currently improving programming skills by diving in Front-End development.</p>
+      <p>My experience conveys a variety of design disciplines derived from several years of work covering web design, editorial design, and brand image, print and online publishing, and creative direction.</p>
+      <p>These pieces below conform a brief snap of my experience and each of them implies a development following a systematic but flexible process combining client expectations, business objectives and user-centered guidelines.</p>
     </div>
 
     <div id="project-a">
@@ -140,10 +140,10 @@
        <div class="intro-txt">
           <p>There are new awesome design tools every year. However, these are my commons selected from a large pool of programs related to interface edition, website design, print layouts, image and graphics, they represent the choice of most designers who I've worked with in collaboration for different projects.</p>
           <ul class="mylist">
-             <li>Adobe CS: Photoshop, Illustrator, Adobe Xd, InDesign, Ae. </li>
-             <li>Balsamiq, Origami, Sketch, InVision.</li>
-             <li>WordPress, Atom, Terminal, Visual Studio Code.</li>
-             <li>Libs: HTML5, CSS3, Sass, JS, JQuery, BootStrap.</li>
+             <li>Adobe CS: Photoshop, Illustrator, Adobe Xd, InDesign. </li>
+             <li>Balsamiq, Sketch, InVision.</li>
+             <li>WordPress, Visual Studio Code.</li>
+             <li>Libs: HTML5, CSS3, Sass, JS, BootStrap.</li>
           </ul>
         </div>
           <div class="img-centered">
@@ -164,7 +164,7 @@
       </div>
       <div style="text-align: center;">
           <a href="https://twitter.com/dannygebran" target="_blank"><i class="fa fa-twitter fa-3x ibtn"></i></a>
-          <a href="https://www.linkedin.com/in/danny-gebran/" target="_blank"><i class="fa fa-linkedin fa-3x ibtn"></i></a>
+          <a href="https://www.linkedin.com/in/gebrandanny/" target="_blank"><i class="fa fa-linkedin fa-3x ibtn"></i></a>
           <a href="https://www.behance.net/dannygebran" target="_blank"><i class="fa fa-behance fa-3x ibtn"></i></a>
           <a href="https://github.com/dannygebran" target="_blank"><i class="fa fa-github fa-3x ibtn"></i></a>
           <a href="https://codepen.io/dannygebran" target="_blank"><i class="fa fa-codepen fa-3x ibtn"></i></a>
